# clemment

./: .gitignore  Dockerfile  LICENSE  README.md  chatlog_manager.py  comment_analyser.py  helpers.py  main.py  openai_client_factory.py  pyproject.toml  requirements.dev.txt  requirements.txt  token_limits.py
.github/workflows/: ci.yaml
cli/: __init__.py
cli/commands/: chatlog.py  run.py
constants/: chatlog.py  system_content.py
core/: __init__.py  comment_analyser.py  file_processing.py  token_limits.py
data/: chatlog.json  system_content.json
src/clemment/: __main__.py  config.py
src/clemment/cli/commands/: chatlog.py  run.py
src/clemment/core/: __init__.py  chatlog_manager.py  clients.py  code_splitter.py  comment_analyser.py  file_processing.py  openai_client_factory.py  token_limits.py
src/clemment/utils/: __init__.py  path_utils.py
src/cli/: parser.py
src/cli/commands/: chatlog.py  run.py
src/core/: __init__.py  chatlog_manager.py  comment_analyser.py  file_processing.py  openai_client_factory.py
tests/: test_chatlog_manager.py  test_comment_analyser.py  test_helpers.py  test_openai_client_factory.py
tests/test_cli/: test_parser.py
tests/test_cli/test_commands/: test_chatlog.py  test_run.py
tests/test_core/: test_chatlog_manager.py  test_clients.py  test_code_splitter.py  test_comment_analyser.py  test_file_processing.py  test_openai_client_factory.py  test_token_limits.py
tests/test_utils/: test_config.py  test_path_utils.py
